--- a/DiYa/DiYa/Class/Class/View/YYShopcartHeaderView.xib
+++ b/DiYa/DiYa/Class/Class/View/YYShopcartHeaderView.xib
@@ -36,6 +36,9 @@
                     <state key="normal" image="icon_goods_accessory">
                         <color key="titleColor" red="0.20000000000000001" green="0.20000000000000001" blue="0.20000000000000001" alpha="1" colorSpace="calibratedRGB"/>
                     </state>
+                    <connections>
+                        <action selector="clickButton:" destination="x6k-cX-2hJ" eventType="touchUpInside" id="tDv-QR-xbf"/>
+                    </connections>
                 </button>
             </subviews>
             <color key="backgroundColor" red="0.98039215686274506" green="0.98039215686274506" blue="0.98039215686274506" alpha="1" colorSpace="calibratedRGB"/>
