--- a/DiYa/DiYa/Class/Class/Controller/WYShopCartController.xib
+++ b/DiYa/DiYa/Class/Class/Controller/WYShopCartController.xib
@@ -41,6 +41,28 @@
                                 <action selector="clickSelectedButton:" destination="Kdy-a3-Bhd" eventType="touchUpInside" id="YH8-TU-UMk"/>
                             </connections>
                         </button>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cgf-BV-9x8">
+                            <rect key="frame" x="288" y="6" width="72" height="37"/>
+                            <color key="backgroundColor" red="0.76078431369999999" green="0.0" blue="0.1019607843" alpha="1" colorSpace="calibratedRGB"/>
+                            <constraints>
+                                <constraint firstAttribute="width" constant="72" id="aaD-TU-wAo"/>
+                                <constraint firstAttribute="height" constant="37" id="vRA-aY-aJg"/>
+                            </constraints>
+                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                            <state key="normal" title="删除">
+                                <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                            </state>
+                            <userDefinedRuntimeAttributes>
+                                <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                    <real key="value" value="18.5"/>
+                                </userDefinedRuntimeAttribute>
+                                <userDefinedRuntimeAttribute type="boolean" keyPath="layer.masksToBounds" value="YES"/>
+                            </userDefinedRuntimeAttributes>
+                            <connections>
+                                <action selector="commitOrder:" destination="Kdy-a3-Bhd" eventType="touchUpInside" id="dgp-FS-paz"/>
+                                <action selector="deleteButton:" destination="Kdy-a3-Bhd" eventType="touchUpInside" id="JKW-LU-D8d"/>
+                            </connections>
+                        </button>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="B6m-rj-SZr">
                             <rect key="frame" x="252" y="5.5" width="108" height="37"/>
                             <color key="backgroundColor" red="0.76078431372549016" green="0.0" blue="0.10196078431372549" alpha="1" colorSpace="calibratedRGB"/>
@@ -71,6 +93,28 @@
                             <color key="textColor" red="0.76078431372549016" green="0.0" blue="0.10196078431372549" alpha="1" colorSpace="calibratedRGB"/>
                             <nil key="highlightedColor"/>
                         </label>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="SfP-UU-GF6">
+                            <rect key="frame" x="165" y="6" width="108" height="37"/>
+                            <color key="backgroundColor" red="0.76078431369999999" green="0.0" blue="0.1019607843" alpha="1" colorSpace="calibratedRGB"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="37" id="u6J-Aw-kpH"/>
+                                <constraint firstAttribute="width" constant="108" id="wBQ-jH-dLH"/>
+                            </constraints>
+                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                            <state key="normal" title="移到收藏">
+                                <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                            </state>
+                            <userDefinedRuntimeAttributes>
+                                <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                    <real key="value" value="18.5"/>
+                                </userDefinedRuntimeAttribute>
+                                <userDefinedRuntimeAttribute type="boolean" keyPath="layer.masksToBounds" value="YES"/>
+                            </userDefinedRuntimeAttributes>
+                            <connections>
+                                <action selector="commitOrder:" destination="Kdy-a3-Bhd" eventType="touchUpInside" id="CvT-D8-9co"/>
+                                <action selector="favoriteGoods:" destination="Kdy-a3-Bhd" eventType="touchUpInside" id="DZF-2p-fws"/>
+                            </connections>
+                        </button>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Zh9-MD-23Y">
                             <rect key="frame" x="75" y="0.0" width="300" height="0.5"/>
                             <color key="backgroundColor" red="0.89411764705882346" green="0.8901960784313725" blue="0.88627450980392153" alpha="1" colorSpace="calibratedRGB"/>
@@ -86,16 +130,24 @@
                         <constraint firstItem="B6m-rj-SZr" firstAttribute="centerY" secondItem="Kdy-a3-Bhd" secondAttribute="centerY" id="3YK-pz-UG6"/>
                         <constraint firstItem="Zh9-MD-23Y" firstAttribute="leading" secondItem="Abr-Fi-QUb" secondAttribute="trailing" id="3vY-bl-xdT"/>
                         <constraint firstItem="B6m-rj-SZr" firstAttribute="leading" secondItem="9BJ-Tv-I4i" secondAttribute="trailing" constant="10" id="D1v-e3-aiG"/>
+                        <constraint firstItem="SfP-UU-GF6" firstAttribute="centerY" secondItem="Kdy-a3-Bhd" secondAttribute="centerY" id="Eth-Nd-h5M"/>
                         <constraint firstItem="Abr-Fi-QUb" firstAttribute="leading" secondItem="Kdy-a3-Bhd" secondAttribute="leading" id="W99-9S-wBp"/>
+                        <constraint firstItem="cgf-BV-9x8" firstAttribute="leading" secondItem="SfP-UU-GF6" secondAttribute="trailing" constant="15" id="Woa-bp-JVJ"/>
+                        <constraint firstAttribute="trailing" secondItem="cgf-BV-9x8" secondAttribute="trailing" constant="15" id="XK4-xY-hhO"/>
                         <constraint firstAttribute="bottom" secondItem="Abr-Fi-QUb" secondAttribute="bottom" id="asf-j2-5bY"/>
                         <constraint firstItem="9BJ-Tv-I4i" firstAttribute="centerY" secondItem="Kdy-a3-Bhd" secondAttribute="centerY" id="hHN-aJ-ZCU"/>
                         <constraint firstItem="Abr-Fi-QUb" firstAttribute="top" secondItem="Kdy-a3-Bhd" secondAttribute="top" id="hg1-Fq-DNr"/>
                         <constraint firstAttribute="trailing" secondItem="Zh9-MD-23Y" secondAttribute="trailing" id="keC-4B-ahw"/>
+                        <constraint firstItem="cgf-BV-9x8" firstAttribute="centerY" secondItem="Kdy-a3-Bhd" secondAttribute="centerY" id="nx9-32-1ju"/>
                         <constraint firstAttribute="height" constant="49" id="pmc-pL-jzG"/>
                         <constraint firstItem="Zh9-MD-23Y" firstAttribute="top" secondItem="Kdy-a3-Bhd" secondAttribute="top" id="rLE-cr-mBD"/>
                     </constraints>
                     <connections>
+                        <outlet property="commitButton" destination="B6m-rj-SZr" id="Qb1-bz-p6w"/>
+                        <outlet property="deleteButton" destination="cgf-BV-9x8" id="nf0-Kj-B1D"/>
+                        <outlet property="favorateButton" destination="SfP-UU-GF6" id="sae-wD-22V"/>
                         <outlet property="priceLabel" destination="9BJ-Tv-I4i" id="qvF-67-QxJ"/>
+                        <outlet property="selectedButton" destination="Abr-Fi-QUb" id="w3m-nw-mIT"/>
                     </connections>
                 </view>
                 <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="grouped" separatorStyle="none" rowHeight="110" estimatedRowHeight="-1" sectionHeaderHeight="18" estimatedSectionHeaderHeight="-1" sectionFooterHeight="18" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="uhq-gD-EAW">
